# ZeroRecover

./: .gitignore  CHANGELOG.md  DEVELOPER_GUIDE.md  README_SECURITY_UPDATE.md  SECURITY.md  SECURITY_AUDIT_COMPLETE.md  SECURITY_FIXES_APPLIED.md  SECURITY_QUICK_REFERENCE.md  USER_GUIDE.md  build.ps1  dev.ps1  index.html  package-lock.json  package.json  vite.config.ts
samples/: sample_certificate.html  sample_certificate.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: audit_log.rs  certificate.rs  hidden_storage.rs  main.rs  path_validator.rs  privilege_check.rs  types.rs  wipe_engine.rs
src/types/: index.ts
