[package]
name = "zero-recover"
version = "0.1.0"
description = "ZeroRecover - Secure Data Wiping Tool with Verifiable Proof"
authors = ["ZeroRecover Team"]
license = "MIT"
repository = "https://github.com/zerorecover/zerorecover"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.4", features = [] }

[dependencies]
tauri = { version = "2.8", features = [] }
tauri-plugin-dialog = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
winapi = { version = "0.3", features = ["winbase", "fileapi", "handleapi", "processthreadsapi", "winnt", "winioctl", "ioapiset", "dpapi", "wincrypt", "minwinbase", "errhandlingapi", "securitybaseapi"] }
ntapi = "0.4"
libc = "0.2"
base64 = "0.21"
ring = "0.17"
dirs = "5.0"
zeroize = { version = "1.7", features = ["derive"] }
printpdf = "0.7"
